<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".PalindromoActivity">

    <Button
        android:id="@+id/btnProcesar"
        style="@style/Widget.GVILLEDA.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/btnProcesar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/tvPalabra"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnProcesar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPalindromo"
        style="@style/Widget.GVILLEDA.TextInputLayout"
        app:endIconMode="clear_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edtPalindromo"
        android:textColorHint="@color/ColorHint"
        app:layout_constraintBottom_toTopOf="@+id/btnProcesar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPalindromo"
            android:layout_width="234dp"
            android:layout_height="54dp"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>